@@ -12,44 +12,36 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.r2s.demo.dto.CategoryDTO;
 import com.r2s.demo.entity.Category;
+import com.r2s.demo.exception.CategoryNotFoundException;
 import com.r2s.demo.repository.CategoryRepository;
 import com.r2s.demo.service.CategoryService;
 
-
-
 @Service
-public class CategoryServiceImpl implements CategoryService{
+public class CategoryServiceImpl implements CategoryService {
 
-	
 	@Autowired
 	private CategoryRepository categoryRepository;
-	
-	@Autowired
-	private  ModelMapper modelMapper;
-	
-	
 
-	
+	@Autowired
+	private ModelMapper modelMapper;
+
 	@Transactional(readOnly = true)
 	@Override
 	public List<CategoryDTO> getAll() {
-		List<Category> categories =  categoryRepository.findAll();
-		return categories.stream()
-				.map(category -> modelMapper.map(category, CategoryDTO.class)).toList();
-				//.collect(Collectors.toList());
+		List<Category> categories = categoryRepository.findAll();
+		return categories.stream().map(category -> modelMapper.map(category, CategoryDTO.class)).toList();
+		// .collect(Collectors.toList());
 	}
+
 	@Transactional(readOnly = true)
 	@Override
 	public CategoryDTO getById(Long id) {
 		Optional<Category> category = categoryRepository.findById(id);
-		if(category.isPresent()) {
+		if (category.isPresent()) {
 			return modelMapper.map(category, CategoryDTO.class);
-		}
-		else
-			
-		return null;
+		} else
+			throw new CategoryNotFoundException("Category not found");
 	}
-
 
 	@Override
 	public CategoryDTO create(CategoryDTO type) {
@@ -57,15 +49,10 @@ public class CategoryServiceImpl implements CategoryService{
 		return null;
 	}
 
-
 	@Override
 	public CategoryDTO update(CategoryDTO type) {
 		// TODO Auto-generated method stub
 		return null;
 	}
-
-	
-
-	
 
 }
